--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask
-gunicorn
-requests
-python-dotenv
-sqlalchemy
-yt-dlp
+flask==3.1.2
+gunicorn==23.0.0
+requests==2.32.3
+python-dotenv==1.2.1
+sqlalchemy==2.0.36
+yt-dlp==2025.12.8
